--- a/blog.html
+++ b/blog.html
@@ -182,7 +182,7 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com
+                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">sales@alaweerautospareparts.com
                                 </a></li>
                                 <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE 
                                 </li>
@@ -594,7 +594,7 @@
                             <h3 class="widget_title">Contact</h3>
                             <div class="widget-contact">
                                 <p><a href="tel:888123456765"> 03 7213838</a></p>
-                                <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
+                                <p><a href="mailto:infoname@mail.com">sales@alaweerautospareparts.com</a></p>
                                 <p>Sanaiya- Al Ain Abu Dhabi UAE  <br> Fax: 03 7213041 -  Box: 63951</p>
                             </div>
                         </div>
@@ -623,7 +623,7 @@
                             <a href="contact.html">Terms & Condition</a>
                             <a href="contact.html">Privacy Policy</a>
                             <a href="contact.html">Contact Us</a>
-                            <a href="assets/img/Scanned Document.pdf" target="_blank">License</a>
+                            <!-- <a href="assets/img/Scanned Document.pdf" target="_blank">License</a> -->
                         </div>
                     </div>
                 </div>                
