--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="home-6.html"><img src="assets/img/logo.png" alt="Al Aweer" width="100" height="100"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="Al Aweer" width="200" height="200"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
@@ -156,13 +156,13 @@
                             <li><a href="wishlist.html">Wishlist</a></li>
                         </ul>
                     </li> -->
-                    <li>
-                        <a href="blog.html">Blog</a>
+                    <!-- <li>
+                        <a href="blog.html">Blog</a> -->
                         <!-- <ul class="sub-menu"> -->
                             <!-- <a href="blog.html"></a> -->
                             <!-- <li><a href="blog-details.html">Blog Details</a></li> -->
                         <!-- </ul> -->
-                    </li>
+                    <!-- </li> -->
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
@@ -180,7 +180,7 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com</a></li>
+                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">sales@alaweerautospareparts.com</a></li>
                                 <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE 
                                    </li>
                                 <li><i class="fas fa-clock"></i>8 AM To 10 PM
@@ -209,13 +209,13 @@
             <!-- Main Menu Area -->
             <div class="menu-area">
                 <div class="header-navbar-logo">
-                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
+                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="200" height="200"></a>
                 </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-lg-start justify-content-between">
                         <div class="col-auto d-xl-none d-block">
                             <div class="header-logo">
-                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
+                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="200" height="200"></a>
                             </div>
                         </div>
                         <div class="col-auto">
@@ -290,13 +290,13 @@
                                             <li><a href="project-details.html">Projects Details</a></li>
                                         </ul>
                                     </li> -->
-                                    <li >
-                                        <a href="blog.html">Blog</a>
+                                    <!-- <li >
+                                        <a href="blog.html">Blog</a> -->
                                         <!-- <ul class="sub-menu"> -->
                                           <!-- <a href="blog.html"></a> -->
                                             <!-- <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul> -->
-                                    </li>
+                                    <!-- </li> -->
                                     <li >
                                         <a href="shop.html">Products</a>
                                         <!-- <ul class="sub-menu">
@@ -712,7 +712,7 @@
     <div class="container">
         <div class="footer-top-1 bg-theme" style="background-image: url(assets/img/bg/footer-top-bg1-1.png);">
             <div class="footer-logo">
-                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="200" height="200"></a>
             </div>
             <div class="call-media-wrap">
                 <div class="icon">
@@ -748,8 +748,8 @@
                                 <ul class="menu">
                                     <li><a href="about.html">About</a></li>
                                     <!-- <li><a href="team.html">Team</a></li> -->
-                                    <li><a href="contact.html">Faq</a></li>
-                                    <li><a href="contact.html">Privacy Policy</a></li>
+                                    <li><a href="terms.html">Terms & conditions</a></li>
+                                    <li><a href="privacy.html">Privacy Policy</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -773,7 +773,7 @@
                             <h3 class="widget_title">Contact</h3>
                             <div class="widget-contact">
                                 <p><a href="tel:888123456765"> 03 7213838 </a></p>
-                                <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
+                                <p><a href="mailto:infoname@mail.com">sales@alaweerautospareparts.com</a></p>
                                 <p>Sanaiya- Al Ain Abu Dhabi UAE<br> Fax: 03 7213041 - P. . Box: 6395</p>
                             </div>
                         </div>
@@ -797,14 +797,14 @@
             <div class="container">
                 <div class="row gy-3 justify-content-md-between justify-content-center">
                     <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">AL AWEER AUTO SPARE PARTS</a> 2018 | All Rights Reserved</p></div>
-                    <div class="col-auto">
+                    <!-- <div class="col-auto">
                         <div class="footer-links">
                             <a href="contact.html">Terms & Condition</a>
                             <a href="contact.html">Privacy Policy</a>
-                            <a href="contact.html">Contact Us</a>
-                            <a href="assets/img/Scanned Document.pdf" target="_blank">License</a>
-                        </div>
-                    </div>
+                            <a href="contact.html">Contact Us</a> -->
+                            <!-- <a href="assets/img/Scanned Document.pdf" target="_blank">License</a> -->
+                        <!-- </div>
+                    </div> -->
                 </div>                
             </div>
         </div>
