--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="200" height="200"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
@@ -158,13 +158,13 @@
                             <li><a href="wishlist.html">Wishlist</a></li>
                         </ul>
                     </li> -->
-                    <li>
-                        <a href="blog.html">Blog</a>
+                    <!-- <li>
+                        <a href="blog.html">Blog</a> -->
                         <!-- <ul class="sub-menu"> -->
                             <!-- <a href="blog.html"></a> -->
                             <!-- <li><a href="blog-details.html">Blog Details</a></li> -->
                         <!-- </ul> -->
-                    </li>
+                    <!-- </li> -->
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
@@ -182,7 +182,7 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com</a></li>
+                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">sales@alaweerautospareparts.com</a></li>
                                 <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE</li>
                                 <li><i class="fas fa-clock"></i>8 AM To 10 PM
                                 </li>
@@ -210,13 +210,13 @@
             <!-- Main Menu Area -->
             <div class="menu-area">
                 <div class="header-navbar-logo">
-                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
+                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="200" height="200"></a>
                 </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-lg-start justify-content-between">
                         <div class="col-auto d-xl-none d-block">
                             <div class="header-logo">
-                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
+                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="200" height="200"></a>
                             </div>
                         </div>
                         <div class="col-auto">
@@ -291,13 +291,13 @@
                                             <li><a href="project-details.html">Projects Details</a></li>
                                         </ul>
                                     </li> -->
-                                    <li >
-                                        <a href="blog.html">Blog</a>
+                                    <!-- <li >
+                                        <a href="blog.html">Blog</a> -->
                                         <!-- <ul class="sub-menu"> -->
                                             <!-- <a href="blog.html"></a> -->
                                             <!-- <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul> -->
-                                    </li>
+                                    <!-- </li> -->
                                     <li >
                                         <a href="shop.html">Products</a>
                                         <!-- <ul class="sub-menu">
@@ -404,7 +404,7 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <h6 class="contact-info_title">E-mail</h6>
-                        <p class="contact-info_text"><a href="mailto:michael.mitc@example.com">alaweerauto@gmail.com</a></p>
+                        <p class="contact-info_text"><a href="mailto:michael.mitc@example.com">sales@alaweerautospareparts.com</a></p>
                         <!-- <p class="contact-info_text"><a href="mailto:nafiz 0121@gmail.com">nafiz 0121@gmail.com</a></p> -->
                     </div>
                 </div>
@@ -415,7 +415,9 @@
     <div class="space-bottom">
         <div class="container">
             <div class="map-sec">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.7310056272386!2d89.2286059153658!3d24.00527418490799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fe9b97badc6151%3A0x30b048c9fb2129bc!2s!5e0!3m2!1sen!2sbd!4v1651028958211!5m2!1sen!2sbd" allowfullscreen="" loading="lazy"></iframe>
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.7310056272386!2d89.2286059153658!3d24.00527418490799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fe9b97badc6151%3A0x30b048c9fb2129bc!2s!5e0!3m2!1sen!2sbd!4v1651028958211!5m2!1sen!2sbd" allowfullscreen="" loading="lazy"></iframe> -->
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3639.3272057743043!2d55.75606657854118!3d24.195317315799784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e8ab145cbd5a049%3A0x2ef9550148494231!2s5QW6%2B49%20-%20Abu%20Dhabi%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1727459498923!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3639.3272041831574!2d54.7583625748593!3d24.19531737155128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e440f723ef2b9%3A0x4fa9ac5d877db311!2s5QW6%2B49%20-%20Abu%20Dhabi%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1727460122139!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
@@ -488,7 +490,7 @@
     <div class="container">
         <div class="footer-top-1 bg-theme" style="background-image: url(assets/img/bg/footer-top-bg1-1.png);">
             <div class="footer-logo">
-                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="200" height="200"></a>
             </div>
             <div class="call-media-wrap">
                 <div class="icon">
@@ -524,8 +526,8 @@
                                 <ul class="menu">
                                     <li><a href="about.html">About</a></li>
                                     <!-- <li><a href="team.html">Team</a></li> -->
-                                    <li><a href="contact.html">Faq</a></li>
-                                    <li><a href="contact.html">Privacy Policy</a></li>
+                                    <li><a href="terms.html">Terms & conditions</a></li>
+                                    <li><a href="privacy.html">Privacy Policy</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -549,7 +551,7 @@
                             <h3 class="widget_title">Contact</h3>
                             <div class="widget-contact">
                                 <p><a href="tel:888123456765">03 7213838</a></p>
-                                <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
+                                <p><a href="mailto:infoname@mail.com">sales@alaweerautospareparts.com</a></p>
                                 <p>Sanaiya- Al Ain Abu Dhabi UAE <br> Fax: 03 7213041 Box: 63951 
                                 </p>
                             </div>
@@ -574,14 +576,14 @@
             <div class="container">
                 <div class="row gy-3 justify-content-md-between justify-content-center">
                     <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">AL AWEER AUTO SPARE PARTS</a> 2018 | All Rights Reserved</p></div>
-                    <div class="col-auto">
+                    <!-- <div class="col-auto">
                         <div class="footer-links">
                             <a href="contact.html">Terms & Condition</a>
                             <a href="contact.html">Privacy Policy</a>
                             <a href="contact.html">Contact Us</a>
-                            <a href="assets/img/Scanned Document.pdf" target="_blank">License</a>
-                        </div>
-                    </div>
+                             <a href="assets/img/Scanned Document.pdf" target="_blank">License</a> -->
+                        <!-- </div>
+                    </div>  -->
                 </div>                
             </div>
         </div>
