--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="200" height="200"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
@@ -210,13 +210,13 @@
             <!-- Main Menu Area -->
             <div class="menu-area">
                 <div class="header-navbar-logo">
-                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="200" height="200"></a>
+                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                 </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-lg-start justify-content-between">
                         <div class="col-auto d-xl-none d-block">
                             <div class="header-logo">
-                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="200" height="200"></a>
+                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                             </div>
                         </div>
                         <div class="col-auto">
@@ -355,7 +355,7 @@
                 </div>
                 <div class="col-lg-6 d-lg-block d-none">
                     <div class="breadcumb-thumb">
-                        <img src="assets/img/normal/breadcrumb-thumb.png" alt="img">
+                        <img src="assets/img/normal/toyota.png" alt="img" width="600" height="400">
                     </div>            
                 </div>
             </div>
@@ -428,13 +428,14 @@
                 <div class="col-lg-6 text-lg-end">
                     <div class="faq-thumb2 mb-xl-0 mb-50">
                         <div class="about-counter-grid jump">
-                            <img src="assets/img/icon/faq2-counter-icon-1.svg" alt="img">
+                            <!-- <img src="assets/img/icon/faq2-counter-icon-1.svg" alt="img"> -->
                             <div class="media-right">
-                                <h3 class="about-counter"><span class="counter-number">250</span>+</h3>
-                                <h4 class="about-counter-text">Products we provide</h4>
+                                <!-- <h3 class="about-counter"><span class="counter-number">250</span>+</h3> -->
+                                <h3 class="about-counter"><span class="">Manager</span></h3>
+                                <h4 class="about-counter-text"> Phone: +971509835854</h4>
                             </div>
                         </div>
-                        <img src="assets/img/normal/faq-thumb-2-1.png" alt="img">
+                        <img src="assets/img/normal/Manager.png" alt="img">
                     </div>
                 </div>
                 <div class="col-lg-6">
