--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@
                 </div>
                 <div class="col-lg-6 d-lg-block d-none">
                     <div class="breadcumb-thumb">
-                        <img src="assets/img/normal/breadcrumb-thumb.png" alt="img">
+                        <img src="assets/img/normal/toyota.png" alt="img" width="800" height="600">
                     </div>            
                 </div>
             </div>
